# iot_controller

./: .gitignore  README.md  main.spec  pyproject.toml
app/: iot_devices.json  main.py
app2/: gui.py  helper.py  iot_devices.json  main.py
app2/iot/: devices.py
