[tool.poetry]
name = "applicationName"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.5,<3.11"
ttkbootstrap = "^1.9.0"
yeelight = "^0.7.10"
requests = "^2.28.1"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pyinstaller = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
